# syntastica-typst

./: .gitignore  Cargo.toml  README.md  build.sh  build_examples.sh  install_local.sh  syntastica.typ  typst.toml
examples/: all_languages.typ  all_themes.typ  comparison.typ  main.typ  prod_toggle.typ
src/: lib.rs
